# ztictl v2.9.0 Release Notes

**Installation:** [Installation Guide](https://github.com/zsoftly/ztiaws/blob/release/v2.9.0/INSTALLATION.md)

**Release Date:** October 09, 2025

## Overview

ztictl is a unified AWS SSM management tool that provides both Go binary and bash script implementations. The Go version (`ztictl`) is the primary implementation with enhanced features, while the bash scripts (`authaws`, `ssm`) are maintained for backward compatibility only.

**Note:** The bash scripts are no longer receiving new features or updates. All development efforts are focused on the Go implementation.

## What's New

### Major UX Improvement: Enhanced Account/Role Selection

**Problem Solved:** Previous versions displayed ALL AWS SSO accounts at once, flooding the terminal with 50+ accounts and making selection overwhelming.

**New Experience:**
* **Clean Interface**: Shows 5 items by default in a compact, bordered selector at bottom of terminal
* **Fully Searchable**: Type to search across all accounts/roles regardless of display height
* **Customizable**: Set `ZTICTL_SELECTOR_HEIGHT` environment variable (1-20) to control display size
* **Better Layout**: Integrated preview panel shows selected account/role details
* **Familiar UX**: Matches fzf `--height=20%` behavior for consistent experience

**Usage:**
```bash
# Use default (5 items)
ztictl auth login

# Show more items
export ZTICTL_SELECTOR_HEIGHT=10
ztictl auth login

# Compact view
ZTICTL_SELECTOR_HEIGHT=3 ztictl auth login
```

## Bug Fixes
* Resolved merge conflict in fuzzy finder implementation with proper bounds checking
* Added code documentation for pointer usage with `WithHotReload()` option